@@ -9,6 +9,7 @@
 =====================================================================
 
 Version 4.3.0
+ - Fixed: [ 2934003 ] Pictures of other gedcom in Multimedia list (canajun2eh)
  - Changed: Fan chart font and colors moved from style.css to theme.php (canajun2eh)
  - Fixed: [ 2917682 ] ERROR 8 in access log (wooc)
  - Update: jQuery.autocomplete plugin 1.1 (volschin)
